# V-max-step_8

./: .gitignore  149_STEP8_LAWFUL_HANDOFF_KPLANE_CODING_AUTHORIZATION.md  CHAT1_AF_UNIX_SAME_CONTEXT_EVIDENCE_PACKET.md  CHAT1_ROUTING_AF_UNIX_EVIDENCE_PACKET.md  HOSTILE_REVIEW_EXACT_PACKET_CHAT3.md  pyproject.toml
.github/workflows/: kplane_chat3_linux_gates.yml
docs/: STEP_8_KPLANE_CODING_PACKET_DRAFT_1.md  STEP_8_KPLANE_HARDENING_PASS_PACKET_DRAFT_1.md
scripts/: chat3_linux_gates.sh  run_linux_af_unix_gates.sh
src/: kplane_protocol.py  kplane_uds.py
tests/: conftest.py  test_kplane_hypothesis.py  test_kplane_protocol.py  test_kplane_uds.py
tools/: assemble_unified_hostile_packet.py
