[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kplane-packet"
version = "0.1.0"
description = "K-plane local framing / UDS scaffold (no business logic)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools]
py-modules = ["kplane_protocol", "kplane_uds"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
show_error_codes = true
exclude = "(?x)(^|/)\\.venv(/|$)"
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --import-mode=importlib"
markers = [
    "hypothesis: property-based / fuzz tests (deterministic profile in tests/conftest.py)",
]
